--- a/project/templates/home/account.html.twig
+++ b/project/templates/home/account.html.twig
@@ -46,10 +46,10 @@
     <section id="latest-evaluations" class="mt-5">
       <h2>Mes dernières évaluations</h2>
       <div class="list-group">
-        {% for synthesis in syntheses %}
+        {% for index, synthesis in syntheses %}
           <a href="/synthesis/{{ synthesis.id }}" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">Évaluation {{ synthesis.id }}</h5>
+              <h5 class="mb-1">Évaluation {{ index + 1 }}</h5>
             </div>
             <p class="mb-1">{{ synthesis.created|date("m/d/Y") }}</p>
           </a>
