--- a/project/templates/navbar.html.twig
+++ b/project/templates/navbar.html.twig
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="./account.html">Mon compte</a>
+        <a class="nav-link" href="/">Mon compte</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact</a>
