--- a/project/templates/home/synthesis.html.twig
+++ b/project/templates/home/synthesis.html.twig
@@ -6,8 +6,7 @@
 {% block body %}
   <div class="container mt-5">
     {% for axis in axises %}
-      <h2>Axe
-        {{ axis.content.name }}</h2>
+      <h2>{{ axis.content.name }}</h2>
       <table class="table table-bordered">
         <thead class="thead-light">
           <tr>
