--- a/project/templates/navbar.html.twig
+++ b/project/templates/navbar.html.twig
@@ -1,16 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">---</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="{{ path('app_home') }}"> Transverse </a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
+      {% if app.user %}
       <li class="nav-item">
         <a class="nav-link" href="/">Mon compte</a>
       </li>
+      {% else %}
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_register') }}"
+          >Créer un compte</a
+        >
+      </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
