--- a/project/templates/navbar.html.twig
+++ b/project/templates/navbar.html.twig
@@ -17,6 +17,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Mon compte</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+      </li>
       {% else %}
       <li class="nav-item">
         <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
