--- a/project/templates/security/login.html.twig
+++ b/project/templates/security/login.html.twig
@@ -21,7 +21,7 @@
 			<div class="row">
 				<div class="col-12 mb-4">
 					<label for="email">Email</label>
-					<input type="email" value="{{ last_username }}" name="email" id="email" class="form-control" autocomplete="email" required autofocus>
+					<input type="email" value="{{ last_username }}" name="_username" id="email" class="form-control" autocomplete="email" required autofocus>
 				</div>
 				<div class="col-12 mb-4">
 					<label for="password">Password</label>
