--- a/project/templates/home/account.html.twig
+++ b/project/templates/home/account.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
   <div class="container mt-5">
 
-    <h1 class="text-center mb-4">Mon entreprise</h1>
+    <h1 class="text-center mb-4">{{ company_name ?? 'Mon entreprise' }}</h1>
     <div class="accordion" id="instructionsAccordion">
       <div class="card">
         <div class="card-header" id="headingOne">
