--- a/project/templates/base.html.twig
+++ b/project/templates/base.html.twig
@@ -15,6 +15,7 @@
     #} {% endblock %} {% endblock %}
   </head>
   <body>
+    test
     {% include 'navbar.html.twig' %} {% block body %}{% endblock %} {% include
     'footer.html.twig' %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
