--- a/project/templates/base.html.twig
+++ b/project/templates/base.html.twig
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <title>{% block title %}Welcome! {% endblock %}</title>
-    <link
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    {% block stylesheets %}{% endblock %} {% block javascripts %} {% block
-    importmap %} {#
-    {{
-      importmap("app")
-    }}
-    #} {% endblock %} {% endblock %}
+    <meta charset="UTF-8"/>
+    <title>
+      {% block title %}Welcome!
+      {% endblock %}
+    </title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/> {% block stylesheets %}{% endblock %}
+    {% block javascripts %}
+      {% block importmap %}{% endblock %}
+    {% endblock %}
   </head>
   <body>
-    {% include 'navbar.html.twig' %} {% block body %}{% endblock %} {% include
+    {% include 'navbar.html.twig' %}
+    {% block body %}{% endblock %}
+    {% include
     'footer.html.twig' %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
   </body>
 </html>
