add version to footer dynamic

--- a/project/templates/footer.html.twig
+++ b/project/templates/footer.html.twig
@@ -21,7 +21,7 @@
 
   <!-- Copyright -->
   <div class="text-center text-white p-3" style="background-color: #dadbdd">
-    <p style="color: rgba(0, 0, 0, 0.5)">Transverse <small> 1.0.0 </small></p>
+    <p style="color: rgba(0, 0, 0, 0.5)">Transverse <small> {{ composer_version() }} </small></p>
   </div>
   <!-- Copyright -->
 </footer>
