add condition to access evaluation

--- a/project/templates/footer.html.twig
+++ b/project/templates/footer.html.twig
@@ -1,5 +1,5 @@
 <footer
-  class="text-center text-lg-start mt-5"
+  class="mt-auto text-center text-lg-start"
   style="background-color: #e9ecef"
 >
   <div class="container d-flex justify-content-center py-5">
@@ -21,7 +21,9 @@
 
   <!-- Copyright -->
   <div class="text-center text-white p-3" style="background-color: #dadbdd">
-    <p style="color: rgba(0, 0, 0, 0.5)">Transverse <small> {{ composer_version() }} </small></p>
+    <p style="color: rgba(0, 0, 0, 0.5)">
+      Transverse <small> {{ composer_version() }} </small>
+    </p>
   </div>
   <!-- Copyright -->
 </footer>
