--- a/project/templates/navbar.html.twig
+++ b/project/templates/navbar.html.twig
@@ -15,7 +15,7 @@
     <ul class="navbar-nav ml-auto">
       {% if app.user %}
       <li class="nav-item">
-        <a class="nav-link" href="/">Mon compte</a>
+        <a class="nav-link" href="/">{{ app.user.name }} - Mon compte</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
