--- a/project/templates/forms/questions.html.twig
+++ b/project/templates/forms/questions.html.twig
@@ -18,7 +18,6 @@
         </tr>
       </thead>
       <tbody>
-        {% set i = 0 %}
         {% for category in categories %}
 					{% for delta, question in category.questions %}
             <tr>
@@ -26,10 +25,9 @@
                 <td rowspan="{{ category.questions|length }}">{{ category.name }}</td>
               {% endif %}
               <td>{{ question.text }}</td>
-              <td>{{ form_widget(form['question_' ~ i]) }}</td>
-							<td>{{ form_widget(form['comment_' ~ i]) }}</td>
+              <td>{{ form_widget(form['question_' ~ question.id]) }}</td>
+							<td>{{ form_widget(form['comment_' ~ question.id]) }}</td>
             </tr>
-            {% set i = i + 1 %}
           {% endfor %}
         {% endfor %}
       </tbody>
