--- a/project/templates/home/account.html.twig
+++ b/project/templates/home/account.html.twig
@@ -40,7 +40,7 @@
     </div>
 
     <div class="text-center mt-4">
-      <a class="btn btn-success" href="{{ path('questions_skill') }}">Créer une nouvelle grille</a>
+      <a class="btn btn-success" href="{{ path('start_synthesis') }}">Créer une nouvelle grille</a>
     </div>
 
     <section id="latest-evaluations" class="mt-5">
